# django_treemenu

./: README.md  manage.py  pyproject.toml  requirements.txt
django_treemenu/: asgi.py  settings.py  urls.py  wsgi.py
menu/: admin.py  models.py  tests.py  urls.py  views.py
menu/migrations/: 0001_initial.py  0002_menuitem_menu.py  0003_alter_menuitem_menu.py  0004_menu_url_menuitem_url.py  0005_rename_url_menu_path_rename_url_menuitem_path.py
menu/templates/menu/: index.html
menu/templatetags/: menu.py
