[tool.poetry]
name = "django-treemenu"
version = "0.1.0"
description = ""
authors = ["Povarenskiy <Povarenskiy.rb@yandex.ru>"]
readme = "README.md"
packages = [{include = "django_treemenu"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
